--- a/static/css/style.css
+++ b/static/css/style.css
@@ -417,6 +417,7 @@ button[type="submit"] {
 @media screen and (min-width: 1450px) {
     .add-post-content {
         background-color: #FF44A7;
+        color: #000;
         padding: 20px;
         border-radius: 10px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -424,6 +425,7 @@ button[type="submit"] {
 
     .user-post-form {
         margin-top: 20px;
+    
     }
 }
 
