--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 
 <head>
     <title>Good News Blog</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Google Fonts CSS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -38,7 +38,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static 'favicon/site.webmanifest' % }">
+    <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}">
 </head>
 
 <body class="d-flex flex-column h-100 main-bg">
