remove commented out code

--- a/templates/base.html
+++ b/templates/base.html
@@ -169,9 +169,10 @@
     <script src="https://kit.fontawesome.com/f5f9306f1c.js" crossorigin="anonymous"></script>
 
     {% block extras %}
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!-- Make sure jQuery is included -->
+    <!-- JQuery and Summernote links -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
     <script src="{% static 'django_summernote/summernote.min.js' %}"></script>
-    <script src="{% static 'js/summernote-init.js' %}"></script> <!-- Your separate JS file -->
+    <script src="{% static 'js/summernote-init.js' %}"></script>
     {% endblock %}
     </body>
 
