--- a/blog/templates/blog/user_profile.html
+++ b/blog/templates/blog/user_profile.html
@@ -120,7 +120,7 @@
 </section>
 
 {% block extras %}
-<script src="{% static 'js/summernote-init.js' %}"></script> <!-- Link to your new JS file -->
+<script src="{% static 'js/summernote-init.js' %}"></script>
 {% endblock %}
 
 {% endblock %}
