--- a/blog/templates/blog/user_profile.html
+++ b/blog/templates/blog/user_profile.html
@@ -72,7 +72,7 @@
                 <!-- Delete Button Form -->
                 <form action="{% url 'post_delete' post.slug %}" method="POST" style="display:inline;">
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-edit btn-sm"
+                    <button type="submit" class="btn btn-sm btn-danger"
                         onclick="return confirm('Are you sure you want to delete this post?');">
                         Delete
                     </button>
